# programowanie-grafiki-3d

./: CMakeLists.txt
BaseGraphicProject-main/src/Exercises/Indices/: app.cpp
src/Exercises/Animation/: CMakeLists.txt  app.cpp  app.h  pyramid.cpp  pyramid.h
src/Exercises/Animation/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/BackfaceCulling/: app.cpp
src/Exercises/CameraMovement/: CMakeLists.txt  CameraControler.h  app.cpp  app.h
src/Exercises/CameraMovement/shaders/: base_fs.glsl
src/Exercises/Colors/: app.cpp
src/Exercises/Indices/shaders/: base_vs.glsl
src/Exercises/Light/: CMakeLists.txt  Pyramid.cpp  app.cpp  app.h  pyramid.cpp  quad.cpp  quad.h  rotation.h
src/Exercises/Light/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/PVM/: app.cpp
src/Exercises/PhongLight/: CMakeLists.txt  Pyramid.h  app.cpp  app.h  quad_2.cpp  quad_2.h
src/Exercises/PhongLight/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Piramida/: CMakeLists.txt  app.cpp
src/Exercises/Piramida/shaders/: base_fs.glsl
src/Exercises/PyramidsAnimation/: CMakeLists.txt  Pyramid.cpp  Pyramid.h  app.cpp  app.h
src/Exercises/PyramidsAnimation/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Textura/: CMakeLists.txt  CameraControler.h  app.cpp  pyramid.cpp  pyramid.h
src/Exercises/Texture/: CMakeLists.txt  Pyramid.cpp  Pyramid.h  app.cpp  app.h  camera.h
src/Exercises/Triangle/: app.cpp
src/Exercises/Uniforms/: app.cpp
src/Exercises/WindowChange/: CMakeLists.txt  app.cpp  app.h
src/Exercises/Zoom/: app.cpp  app.h  camera.h
(+5 files in other folders)
